# That

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-vendors.sh  build.bat  build.sh  debug.sh  glass.cpp  hello.that  install.sh  memtest.sh  miau.hexproj  run.sh  test  test.glscript  test.radic  test.rd  test.rux  test.sh  test.th  test.that  testmem.sh
Libs/: README.md
Libs/Math/: package.toml
Libs/Std/: CMakeLists.txt  build.sh  package.toml
Libs/StdIo/: CMakeLists.txt  build.sh  package.toml
Libs/StdMath/: CMakeLists.txt  build.sh  package.toml
Libs/_Internal/: CMakeLists.txt  build.sh  package.toml
Std/: README.md  package.toml
Std/src/: print.cpp  read.cpp
That/: CMakeLists.txt  flags.h  logs.cpp  logs.h  main.cpp  main.h  resource.cpp
That/Adapter/: adapter.cpp  adapter.h  debug_adapter.cpp  debug_adapter.h
That/Ast/: ast.cpp  ast.h  error.cpp  error.h  node.cpp  node.h  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h
That/Environment/: environment.cpp  environment.h
That/Libs/: ctypes.cpp  ctypes.h  internal_package.cpp  internal_package.h  packages.cpp  packages.h  types.h
That/Objects/: container.cpp  container.h  function.cpp  function.h  object.cpp  object.h  operation.cpp  operation.h  prototype.cpp  prototype.h  scope.cpp  scope.h  type.cpp  type.h  variable.cpp  variable.h
That/Utils/: system.cpp  system.h  thatpath.h
That/VM/: vm.cpp  vm.h
That/res/Lib/: CMakeLists.txt  package.toml
That/src/: resource.cpp  resource.h
ThatCXX/: CMakeLists.txt  cppadapter.cpp  cppadapter.h  main.cpp  main.h
ThatCXX/Formatter/: formatter.cpp  formatter.h
ThatCXX/Objects/: container.cpp  container.h  function.cpp  function.h  object.cpp  object.h  operation.cpp  operation.h  prototype.cpp  prototype.h  type.cpp  type.h  variable.cpp  variable.h
ThatCXX/Transpiler/: environment.cpp  environment.h  scope.cpp  scope.h  transpiler.cpp  transpiler.h
ThatIR/: CMakeLists.txt
ThatIR/Ast/: ast.cpp  ast.h  error.cpp  error.h  node.cpp  node.h  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h
ThatIR/Libs/: ctypes.cpp  ctypes.h  internal_package.cpp  internal_package.h  packages.cpp  packages.h  types.h
ThatIR/Logs/: logs.cpp  logs.h
ThatIR/Objects/: container.cpp  container.h  environment.cpp  environment.h  function.cpp  function.h  object.cpp  object.h  operation.cpp  operation.h  prototype.cpp  prototype.h  scope.cpp  scope.h  type.cpp  type.h  variable.cpp  variable.h
ThatIR/Utils/: system.cpp  system.h  thatpath.h
ThatLib/: CMakeLists.txt
ThatLib/Adapter/: adapter.h  debug_adapter.h
ThatLib/Ast/: ast.cpp  ast.h  error.cpp  error.h  node.cpp  node.h  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h
ThatLib/Environment/: environment.cpp  environment.h
ThatLib/Libs/: ctypes.cpp  ctypes.h  internal_package.cpp  internal_package.h  packages.cpp  packages.h  types.h
ThatLib/Logs/: logs.cpp  logs.h
ThatLib/Objects/: container.cpp  container.h  environment.cpp  environment.h  function.cpp  function.h  object.cpp  object.h  operation.cpp  operation.h  prototype.cpp  prototype.h  scope.cpp  scope.h  type.cpp  type.h  variable.cpp  variable.h
ThatLib/Transpiler/: adapter.cpp  adapter.h  debug_adapter.cpp  transpiler.cpp  transpiler.h
ThatLib/Utils/: system.cpp  system.h
ThatVM/: CMakeLists.txt  main.cpp
Thatc/: CMakeLists.txt  file.cpp  file.h  flags.cpp  main.cpp  main.h  resource.cpp
Thatc/VM/: bytecode.cpp  bytecode.h  constant.cpp  constant.h  instruction.cpp  instruction.h  op_codes.cpp  op_codes.h  vm.cpp  vm.h
Thatc/res/Lib/: README.md  build.sh
Thatc/res/Lib/src/: test.h
Zag/: CMakeLists.txt  main.cpp  main.h
Zag/res/Lib/: CMakeLists.txt  README.md  build.sh  package.toml
Zag/src/: main.cpp  resource.cpp  resource.h
ZagCXX/: CMakeLists.txt  main.cpp  main.h  resource.cpp  resource.h
ZagCXX/Formatter/: formatter.cpp  formatter.h
ZagCXX/Objects/: container.cpp  container.h  function.cpp  function.h  object.h  operation.h  prototype.cpp  prototype.h  variable.h
ZagCXX/Transpiler/: container.cpp  container.h  environment.cpp  environment.h  formatter.cpp  formatter.h  function.cpp  object.cpp  object.h  operation.cpp  prototype.cpp  prototype.h  scope.cpp  scope.h  transpiler.cpp  transpiler.h  type.cpp  type.h  variable.cpp  vartype.cpp  vartype.h
ZagCXX/res/: CMakeLists.txt
ZagCXX/src/: main.cpp
ZagIR/: CMakeLists.txt  main.cpp
ZagIR/Ast/: ast.cpp  ast.h  error.cpp  node.cpp  node.h  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h
ZagIR/Frontend/: error.h
ZagIR/Libs/: Types.h  ctypes.cpp  ctypes.h  internal_package.cpp  internal_package.h  packages.cpp  packages.h
ZagIR/Logs/: logs.cpp  logs.h
ZagIR/Utils/: system.cpp  system.h  zagpath.h
ZagStd/: CMakeLists.txt
builds/: CMakeCache.txt  Makefile  cmake_install.cmake
builds/That/: Makefile  cmake_install.cmake
builds/ThatCXX/: Makefile  cmake_install.cmake
builds/ThatLib/: Makefile  cmake_install.cmake
examples/: test.that
extras/guides/: syntax.md
oldlibs/Math/: package.toml
oldlibs/Std/: package.toml
oldlibs/_Internal/: README.md  package.toml
scripts/: That  build.sh  debug.sh  install.sh  memtest.sh  script  script.that  test.sh  test.that
src/: CMakeLists.txt  glass.cpp  internal.cpp  internal.h  kernel.cpp  kernel.h  lexer.cpp  lexer.h  machine.cpp  machine.h  main.cpp  nodes.cpp  nodes.h  operations.cpp  parser.cpp  parser.h  radic.cpp  rux.cpp  shell.cpp  shell.h  that.cpp  version.cpp  version.h
src/builder/: builder.cpp  builder.h  reinterpreter.cpp  reinterpreter.h
src/compiler/: airthmetic.cpp  airthmetic.h  assembler.cpp  assembler.h  lexer.cpp  lexer.h  nodes.cpp  nodes.h  parser.cpp  parser.h  serializer.cpp  serializer.h
src/flags/: flags.cpp  flags.h
src/vm/: VM.md  (+9 more)
tests/: 2test.zag  arrays.zag  fib.py  fib.zag  it_starts.zag  juan.zag  maketest.sh  manual.zag  math.zag  primes.zag  test.that  test.zag  tests.txt  typeDeduction.zag
zagtests/: it_starts.zag  juan.zag  manual.zag  math.zag  primes.zag
(+84 files in other folders)
